<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/why_polytech"
        android:background="?attr/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"

        android:textColor="?attr/colorSwitchThumbNormal"
        android:id="@+id/why" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/why_IT"
        android:textAlignment="inherit"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/colorSwitchThumbNormal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"

        android:id="@+id/why_2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/why_android"
        android:background="?attr/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:textColor="?attr/colorSwitchThumbNormal"
        android:id="@+id/why_3" />
</LinearLayout>