<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:id="@+id/menuTitle"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:paddingTop="10dp"
        android:background="#FFFFFF" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuLogo"
        android:src="@drawable/polytech_logo"
        android:contentDescription="@string/polytech"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_description"
        android:id="@+id/menuDescription"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:textColor="#000000"
        android:autoText="false"
        android:paddingTop="20dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:id="@+id/imageView"
        android:src="@drawable/polytech"
        android:contentDescription="@string/polytech"
        android:layout_gravity="center_horizontal" />

</LinearLayout>